--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -1,3 +1,10 @@
+button:focus,
+input:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
+}
+
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
@@ -51,7 +58,7 @@ body {
     color: white;
     border: none;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 15px;
     font-size: 16px;
 }
 
@@ -122,10 +129,33 @@ button[type="submit"] {
     padding: 10px;
     border: none;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 15px;
     font-size: 16px;
 }
 
 button[type="submit"]:hover {
     background: #31574b;
+}
+
+/* estilos de autorisaciones */
+
+#color_table{
+    display: flex;
+    padding: 2px;
+    border-radius: 15px;
+    text-align: center;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 15px;
+}
+
+.autorizado {
+    background-color: #B3E2AE; /* Fondo verde claro */
+    color: #00A006;            /* Texto verde oscuro */
+}
+
+.no-autorizado {
+    background-color: #FFADAD; /* Fondo rojo claro */
+    color: #FF0202; 
 }
